# Trans4trade

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  0lobretrieve.py  1.1_agg_trade.py  1.21_combine_lob_agg.py  1.999_orderbook_concat.py  1.99aggregate_by_dollar_volume.py  1_build_orderbook.py  2.0_data_precleaning copy.ipynb  2.0_data_precleaning.ipynb  2_data_precleaning.ipynb  2agg_by_dol_volume.py  3.1_predicting_ts_LSTM_testing.ipynb  3_predicting_ts_LSTM.ipynb  4.1_predicting_ts_transformer.ipynb  7_Dlinear.ipynb  7_LSTM.ipynb  7_enc_trans_dec_linear.ipynb  7_s4.ipynb  7_s4_enc_trans_lin_dec spiking.ipynb  7_s4_enc_trans_lin_dec.ipynb  8_meta_labelling.ipynb  9_backtester.ipynb  9_backtester_s4.ipynb  9_backtester_trans.ipynb  AUDIT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  buildorerbook.py  dataprelearn.py  env.example  helpers.py  inference_Benchmark.py  license-simon  models.py  overall_console.ipynb  (+6 more)
artifacts/: README.md
data/: README.md
docs/: README.md  STRUCTURE.md
docs/papers/: README.md
experimental_models/: 7_s4_enc_trans_lin_dec.ipynb  T4T.py  all.py  attn_lstm.py  deeplob.py  log.txt  lstm_attn.py  lstm_attn_stable.py  lstm_normal.py  ppp.py
experiments/: README.md
experiments/experimental_models/: 7_s4_enc_trans_lin_dec.ipynb  T4T.py  all.py  attn_lstm.py  deeplob.py  lstm_attn.py  lstm_attn_stable.py  lstm_normal.py  ppp.py  pxp.ipynb
notebooks/: README.md
presquerities/: 1.22_combine.py
reports/: README.md
routemachine/: route.py
总体操作指南（按照一个个pyscript）/: 1.99expn.md  7expn.md
(+98 files in other folders)
